# PyTran

./: README.md  pyproject.toml  test.py
PyTran/: English.json  English.py  EnglishSen.json  Run.py  __init__.py
PyTran_LeeLunbin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
