[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "PyTran_LeeLunbin"
version = "0.0.1"
authors = [
  { name="Lee Lunbin", email="hilandchristian112@gmail.com" },
]
description = "A PyKorean API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChristianHiland/PyTran"
"Bug Tracker" = "https://github.com/ChristianHiland/PyTran/issues"